Рефакторинг, добавлено Вид прыжка, добавлены поля, реализован контроль дат регистрации. Огромное количество изменений

--- a/app/assets/stylesheets/application.css.erb
+++ b/app/assets/stylesheets/application.css.erb
@@ -42,6 +42,8 @@ body, p, ol, ul, td {
 }
 
 .top-buffer { margin-top: 20px }
+.top-buffer-10 { margin-top: 10px }
+
 .clickableRow { cursor: pointer }
 
 .clouds-bg {
@@ -56,8 +58,6 @@ body, p, ol, ul, td {
   background-color: #fff;
   z-index: -100;
 }
-
-
 
 .datepicker {
   z-index: 1151 !important;
