--- a/app/views/event_tracks/_new_track.html.haml
+++ b/app/views/event_tracks/_new_track.html.haml
@@ -17,24 +17,19 @@
 
         .modal-body
           .form-group
-            = f.label 'Участник', :class => 'col-sm-4 control-label', :for => 'name'
-            .col-sm-8
-              = f.collection_select :competitor_id, @event.competitors, :id, :user_name
+            = f.label 'Участник', :class => 'col-sm-2 control-label', :for => 'name'
+            .col-sm-10
+              = f.collection_select :competitor_id, @event.competitors, :id, :user_name, {:promt => true}, {:class => 'form-control'}
 
           .form-group
-            = f.label 'Раунд', :class => 'col-sm-4 control-label', :for => 'round'
-            .col-sm-8
-              = f.collection_select :round_id, @event.rounds, :id, :name_with_discipline
+            = f.label 'Раунд', :class => 'col-sm-2 control-label', :for => 'round'
+            .col-sm-10
+              = f.collection_select :round_id, @event.rounds, :id, :name_with_discipline, {:promt => true}, {:class => 'form-control'}
 
           .form-group
-            = f.label 'Трек', :class => 'col-sm-4 control-label', :for => 'track'
-            .col-sm-8
-              = f.collection_select :track_id, Track.all, :id, :presentation
-
-          .form-group
-            = f.label 'Результат', :class => 'col-sm-4 control-label', :for => 'result'
-            .col-sm-8
-              = f.number_field :result, :class => 'form-control', :step => '0.01'
+            = f.label 'Трек', :class => 'col-sm-2 control-label', :for => 'track'
+            .col-sm-10
+              = f.collection_select :track_id, Track.all, :id, :presentation, {:promt => true}, {:class => 'form-control'}
 
         .modal-footer
           %button.btn.btn-default{:type => 'button', :data => {:dismiss => 'modal'}}='Отмена'
