--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -15,7 +15,7 @@
             %li
               %a{:href => '#', :data => {:toggle => 'modal', :target => '#newTrackModal'}}= t('application.header.upload_track')
             %li
-              = link_to t('application.header.tracks'), track_path
+              = link_to t('application.header.tracks'), tracks_path
             %li.divider
             %li= link_to t('application.header.about'), about_path
 
