--- a/app/views/tracks/index.html.haml
+++ b/app/views/tracks/index.html.haml
@@ -15,7 +15,7 @@
       %tr.clickableRow{:data => {:url => track_path(:id => track.id)}}
         %td.text-info= track.id
         %td.text-info= track.name
-        %td.text-info= track.suit
+        %td.text-info= track.wingsuit.present? ? track.wingsuit.name : track.suit
         %td.text-info= track.location
         %td.text-muted= track.comment
         %td.text-info= track.created_at
