--- a/app/views/events/results.html.haml
+++ b/app/views/events/results.html.haml
@@ -1,2 +1,3 @@
-%h1.text-center.text-info= @event.name
-=render partial: 'event_tracks/results_table'
+.container-fluid
+  %h1.text-center.text-info= @event.name
+  =render partial: 'event_tracks/results_table'
