--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -15,13 +15,6 @@
 // Font Awesome
 @import "fontawesome/font-awesome";
 
-//// Glyphicons
-//@font-face {
-//  font-family: 'Glyphicons Halflings';
-//  src: url('/assets/glyphicons-halflings-regular.eot');
-//  src: url('/assets/glyphicons-halflings-regular.eot?#iefix') format('embedded-opentype'), url('/assets/glyphicons-halflings-regular.woff') format('woff'), url('/assets/glyphicons-halflings-regular.ttf') format('truetype'), url('/assets/glyphicons-halflings-regular.svg#glyphicons-halflingsregular') format('svg');
-//}
-
 #map img {
   max-width: none;
 }
@@ -38,6 +31,56 @@
   border-top-color: @navbar-default-border;
   border-top-style: solid;
   border-top-width: 1px;
+}
+
+.navbar {
+  margin-bottom: 0;
+}
+
+.index-header {
+  background-color: rgb(115, 155, 184);
+  background-image: linear-gradient(rgb(115, 155, 184) 0px, rgb(146, 188, 217) 100%);
+  background-repeat: repeat-x;
+  box-sizing: border-box;
+  color: rgb(202, 239, 253);
+  display: block;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 24px;
+  line-height: 34px;
+  margin-bottom: 40px;
+  padding-bottom: 60px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 60px;
+  position: relative;
+  text-align: left;
+  text-shadow: rgba(0, 0, 0, 0.0980392) 0px 1px 0px;
+  width: 100%;
+}
+
+.index-header h1 {
+  box-sizing: border-box;
+  color: rgb(245, 245, 245);
+  display: block;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 60px;
+  font-weight: 500;
+  height: 60px;
+  line-height: 60px;
+  margin-bottom: 10px;
+  margin-top: 0px;
+  text-align: left;
+  text-shadow: rgba(0, 0, 0, 0.0980392) 0px 1px 0px;
+}
+
+.index-header p {
+  color: rgb(205, 241, 255);
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-size: 24px;
+  font-weight: 300;
+  line-height: 33px;
+  text-align: left;
+  text-shadow: rgba(0, 0, 0, 0.0980392) 0px 1px 0px;
 }
 
 //@import "twitter/bootstrap/sprites.less";
