--- a/app/assets/stylesheets/events.css.erb
+++ b/app/assets/stylesheets/events.css.erb
@@ -4,6 +4,19 @@
 
 /*GPS Performance Borki 2014*/
 
+.clouds-bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: url(<%= asset_path('background.jpg') %>) no-repeat center center;
+  background-size: cover !important;
+  background-attachment: fixed !important;
+  background-color: #fff;
+  z-index: -100;
+}
+
 .bws-logo {
   opacity: 0.7;
   position: fixed;
