--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -47,7 +47,6 @@
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 24px;
   line-height: 34px;
-  margin-bottom: 40px;
   padding-bottom: 60px;
   padding-left: 15px;
   padding-right: 15px;
@@ -58,23 +57,35 @@
   width: 100%;
 }
 
+.index-first-line {
+  background-color: rgb(255, 250, 190);
+  background-image: linear-gradient(rgb(255, 250, 190) 0px, rgb(255, 250, 190) 100%);
+  background-repeat: repeat-x;
+  box-sizing: border-box;
+  display: block;
+  position: relative;
+//  margin-bottom: 40px;
+}
+
 .index-header h1 {
   box-sizing: border-box;
   color: rgb(245, 245, 245);
   display: block;
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-size: 60px;
+  font-size: 40px;
   font-weight: 500;
-  height: 60px;
-  line-height: 60px;
   margin-bottom: 10px;
   margin-top: 0px;
   text-align: left;
   text-shadow: rgba(0, 0, 0, 0.0980392) 0px 1px 0px;
 }
 
+.index-header h1 small {
+  color: rgb(221, 221, 221);
+}
+
 .index-header p {
-  color: rgb(205, 241, 255);
+  color: rgb(215, 251, 255);
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 24px;
   font-weight: 300;
