--- a/app/views/static_pages/index.html.haml
+++ b/app/views/static_pages/index.html.haml
@@ -6,22 +6,18 @@
   .container
     .row
       .col-9.col-xs-12.col-sm-9.col-md-9.col-lg-9
-        %h1= 'SKY DERBY'
-        %p= 'Простой и удобный сервис для анализа GPS треков и проведения соревнований в формате GPS Performance.'
+        %h1
+          = t('.title')
+          %small= t('.subtitle')
+        %p= 'Анализ GPS треков и проведение соревнований в формате GPS Performance.'
         %a.btn.btn-success.btn-lg{:href => '#', :data => {:toggle => 'modal', :target => '#newTrackModal'}}
           %i.fa.fa-upload
-          = 'Загрузить трек'
+          = t('application.header.upload_track')
       .col-3.hidden-xs.col-sm-3
         %img.img-responsive{:src => asset_path('app-logo.png')}
 
 .container.top-buffer
   .row
-    .col-6.col-sm-6.col-lg-4
-      %h2= 'Borki GPS Performance 2014'
-      %p= '3-5 октября на аэродроме Борки пройдут соревнования памяти Марии Шипиловой в формате GPS Performance. В соревнованиях примут участие 21 человек.'
-      %p
-        %a{:href => event_path( :id => 1 )}='На страницу события >>'
-
     .col-6.col-sm-6.col-lg-4
       %h2= 'Menzelinsk Sky Race'
       %p= '6-8 сентября на аэродроме Мензелинск прошли соревнования в дисциплинах Время, Дальность, Скорость. В соревнованиях приняли участие спортсмены из 11 городов.'
