--- a/app/views/tracks/show.html.haml
+++ b/app/views/tracks/show.html.haml
@@ -8,6 +8,7 @@
     var charts_data = #{@track.get_charts_data};
     // Максимальная высота трека
     var max_height = #{@track.get_max_height};
+    var min_height = #{@track.get_min_height};
 
     var param_from = #{@f};
     var param_to = #{@t};
@@ -17,8 +18,12 @@
       param_to = -1;
     }
 
+    if (param_to < min_height) {
+      param_to = -1;
+    }
+
     var range_from = param_from == -1 ? max_height : param_from;
-    var range_to = param_to == -1 ? 0 : param_to;
+    var range_to = param_to == -1 ? min_height : param_to;
 
     var mft_k = 3.280839895;
     var in_imperial = false;
@@ -97,7 +102,7 @@
 
       $("#range_selector").ionRangeSlider({
         min: max_height,
-        max: 0,
+        max: min_height,
         type: 'double',
         step: 50,
         prettify: false,
@@ -633,8 +638,8 @@
           min_v_speed = min_v_speed == 0 || min_v_speed > point.v_speed ? point.v_speed : min_v_speed;
           max_v_speed = max_v_speed == 0 || max_v_speed < point.v_speed ? point.v_speed : max_v_speed;
 
-          min_gr = min_gr == 0 || min_gr > point.glrat ? point.glrat : min_gr;
-          max_gr = max_gr == 0 || max_gr < point.glrat ? point.glrat : max_gr;
+          min_gr = min_gr == 0 || min_gr == null || min_gr > point.glrat ? point.glrat : min_gr;
+          max_gr = max_gr == 0 || max_gr == null || max_gr < point.glrat ? point.glrat : max_gr;
         }
 
         if (isLast && elev_data.length > 0) {
@@ -723,13 +728,13 @@
 
   });
 
-.container.top-buffer
+.container
   .page-header
     .row
       .col-md-11
         %h1
           = "#{@track.name} | #{t '.title_track'} ##{@track.id}"
-          %small="#{t '.title_suit'} : #{@track.wingsuit.present? ? @track.wingsuit.name : @track.suit}"
+          %small="#{t '.title_suit'}: #{@track.wingsuit.present? ? @track.wingsuit.name : @track.suit}, @#{@track.location}"
 
       .dropdown-container.col-md-1
         .dropdown
@@ -746,10 +751,13 @@
               %a#toggle_metric{:role => 'menuitem', :tabindex => '-1', :href => '#'}=t '.m_units_metric'
             %li#li_toggle_imperial{:role => 'presentation'}
               %a#toggle_imperial{:role => 'menuitem', :tabindex => '-1', :href => '#'}=t '.m_units_imperial'
-            - if user_signed_in? && (current_user == @track.user || (can? :manage, :tracks))
+            - if user_signed_in? && (current_user == @track.user || (can? :update, :tracks))
               %li.dropdown-header{:role => 'presentation'}= t('tracks.show.manage')
               %li{:role => 'presentation'}
-                = link_to t('tracks.show.delete'), @track, :method => :delete, :data => {:confirm => t('.delete_confirmation')}, :role => 'menuitem'
+                = link_to t('tracks.show.edit'), edit_track_path(@track), :role => 'menuitem'
+              - if can? :destroy, @track
+                %li{:role => 'presentation'}
+                  = link_to t('tracks.show.delete'), @track, :method => :delete, :data => {:confirm => t('.delete_confirmation')}, :role => 'menuitem'
 
   .row
     .col-md-3
