--- a/app/views/events/_competitors_table.html.haml
+++ b/app/views/events/_competitors_table.html.haml
@@ -2,8 +2,8 @@
   %thead
     %tr
       %th= '№'
-      %th= 'Класс / Участник'
-      %th= 'Вингсьют'
+      %th= t('events.show.class_comp')
+      %th= t('tracks.index.suit')
   %tbody
   - @event.competitors_table.each do |val|
     %tr
