--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -4,6 +4,6 @@
       .col-sm-8
         %p.copyright= "Copyright © #{t 'application.footer.owner'} 2014"
       .col-sm-4
-        %a{:href => 'https://www.facebook.com/skyderby.ru'}= 'Страница приложения в facebook'
+        %a{:href => 'https://www.facebook.com/skyderby.ru'}= t('application.footer.fb_page')
         %br
-        %a{:href => 'mailto:ab@ipkunin.ru'}= 'email: ab@ipkunin.ru'
+        %a{:href => 'mailto:ab@ipkunin.ru'}= 'support: ab@ipkunin.ru'
