--- a/app/views/events/_admin_tab.html.haml
+++ b/app/views/events/_admin_tab.html.haml
@@ -2,18 +2,18 @@
   %ul.nav.nav-pills.nav-stacked.col-md-2{:role =>'tablist'}
     %li.active
       %a{:href => '#m_pfs', :data => {:toggle => 'tab'}}
-        = 'Заявки'
+        = t('events.show.pfs')
         - if @event.participation_forms.count > 0
           %span.badge.pull-right
             = @event.participation_forms.count
     %li
-      %a{:href => '#m_rounds', :data => {:toggle => 'tab'}}= 'Раунды'
+      %a{:href => '#m_rounds', :data => {:toggle => 'tab'}}= t('events.show.rounds')
     %li
-      %a{:href => '#m_orgs', :data => {:toggle => 'tab'}}= 'Организаторы'
+      %a{:href => '#m_orgs', :data => {:toggle => 'tab'}}= t('events.show.orgs')
     %li
-      %a{:href => '#m_docs', :data => {:toggle => 'tab'}}= 'Документы'
+      %a{:href => '#m_docs', :data => {:toggle => 'tab'}}= t('events.show.docs')
     %li
-      %a{:href => '#m_info', :data => {:toggle => 'tab'}}= 'Описание'
+      %a{:href => '#m_info', :data => {:toggle => 'tab'}}= t('events.show.overview')
 
   .tab-content.col-md-10
     .tab-pane.active#m_pfs
