--- a/app/views/events/_rounds_table.html.haml
+++ b/app/views/events/_rounds_table.html.haml
@@ -3,13 +3,12 @@
 %table.table.table-hover
   %thead
     %tr
-      %th= 'Название'
-      %th= 'Дисциплина'
-      %th= 'Действия'
+      %th= t('rounds.name')
+      %th= t('rounds.discipline')
   %tbody#rounds_table_body
   - @event.rounds.each do |t|
     = render :partial => 'round', locals: {round: t }
 
-%button.btn.btn-default{:data => {:toggle => 'modal', :target => '#newRoundEventModal'}}= 'Добавить раунд'
+%button.btn.btn-default{:data => {:toggle => 'modal', :target => '#newRoundEventModal'}}= t('general.create')
 
 %hr
