--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -1,4 +1,4 @@
-.container.top-buffer
+.container
   .row
     .page-header.col-md-12
       .col-md-10
@@ -72,17 +72,16 @@
 
     .tab-content
       .tab-pane#results
-        %h2= 'Результаты соревнований'
         - if current_user && current_user.event_admin?(@event)
           = render :partial => 'event_tracks/new_track'
         = render :partial => 'event_tracks/results_table'
 
       .tab-pane.active#overview
-        %h2= 'Описание'
+        %h2= t('events.show.overview')
         = simple_format @event.descriprion
 
       .tab-pane#docs
-        %h2= 'Документы'
+        %h2= t('events.show.docs')
         = render :partial => 'event_documents/docs_table', :locals => {:show_delete_link => false}
 
       .tab-pane#dz_info
