--- a/app/views/participation_forms/_table.html.haml
+++ b/app/views/participation_forms/_table.html.haml
@@ -1,9 +1,9 @@
-%h3.text-danger= 'Не обработанные заявки'
+%h3.text-danger= t('events.show.pf.pending')
 .top-buffer
   - @event.participation_forms.where(:status => 'active').each do |pf|
     = render :partial => 'participation_forms/show', locals: {pf: pf, merge_intermediate_and_rookie: @event.merge_intermediate_and_rookie}
 
-%h3.text-info= 'Обработанные заявки'
+%h3.text-info= t('events.show.pf.completed')
 .top-buffer
   - @event.participation_forms.where.not(:status => 'active').each do |pf|
     = render :partial => 'participation_forms/show', locals: {pf: pf, merge_intermediate_and_rookie: @event.merge_intermediate_and_rookie}
