--- a/app/views/tracks/index.html.haml
+++ b/app/views/tracks/index.html.haml
@@ -19,4 +19,4 @@
           %td.text-info= track.wingsuit.present? ? track.wingsuit.name : track.suit
           %td.text-info= track.location
           %td.text-muted= track.comment
-          %td.text-info= track.created_at
+          %td.text-info= track.created_at.strftime('%d.%m.%Y')
