--- a/app/views/tracks/_new_track.html.haml
+++ b/app/views/tracks/_new_track.html.haml
@@ -136,5 +136,5 @@
           %div#alert-placeholder
 
         .modal-footer
-          %button.btn.btn-default{:type => 'button', :data => {:dismiss => 'modal'}}='Отмена'
+          %button.btn.btn-default{:type => 'button', :data => {:dismiss => 'modal'}}=t('general.cancel')
           = submit_tag t('static_pages.index.track_form.submit'), :class => 'btn btn-default'
